--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>トップ | 架空鉄道 芝野鉄道公式サイト</title>
+        <title>トップ | 架空鉄道 芝野鉄道オフィシャルサイト</title>
+
+        <link rel="stylesheet" href="./css/main_style.css" />
     </head>
 
     <body>
         <header>
             <h2>main</h2>
+            <a href="#" id="btn-darkmode"><span></span></a>
         </header>
     </body>
+
 </html>
