ライト/ダークの切り替えボタンを実装

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
     <head>
         <meta charset="UTF-8">
         <title>トップ | 架空鉄道 芝野鉄道オフィシャルサイト</title>
@@ -10,8 +10,12 @@
     <body>
         <header>
             <h2>main</h2>
-            <a href="#" id="btn-darkmode"><span></span></a>
+            <div class="darkmode-c">
+                <input id="checkbox-darkmode" type="checkbox"><button id="button-darkmode">Light Mode</button>
+            </div>
         </header>
     </body>
+
+    <script src="js/script.js"></script>
 
 </html>
