--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <h2>main</h2>
             <div class="darkmode-c">
-                <input id="checkbox-darkmode" type="checkbox"><button id="button-darkmode">Light Mode</button>
+                <input id="checkbox-darkmode" type="checkbox"><button id="button-darkmode"></button>
             </div>
         </header>
     </body>
