ロゴマーク色変更を追加

--- a/index.html
+++ b/index.html
@@ -9,16 +9,26 @@
 
     <body>
         <header>
-            <h2>main</h2>
 
-            <div class="darkmode_toggle">
-                <input type="radio" name="d_togglesw" id="on" value="1" checked=""/>
-                <input type="radio" name="d_togglesw" id="off" value="0"/>
-                <label for="on" class="switch_light">Light Mode</label>
-                <label for="off" class="switch_dark">Dark Mode</label>
+            <div class="header_menu">
+                <h2><img id="logo_image" src="./images/shibanorail_lightlogo.png"></h2>
             </div>
 
         </header>
+
+        <main>
+            <div class="darkmode_toggle">
+                <input type="radio" name="d_togglesw" id="on" value="1"/>
+                <label for="on" class="switch_light">Light Mode</label>
+                <input type="radio" name="d_togglesw" id="off" value="0"/>
+                <label for="off" class="switch_dark">Dark Mode</label>
+            </div>
+            <br><br><br>
+        </main>
+
+        <footer>
+            footer
+        </footer>
     </body>
 
     <script src="./js/script.js"></script>
