シームチェンジ完成版

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>トップ | 架空鉄道 芝野鉄道オフィシャルサイト</title>
 
         <link rel="stylesheet" href="./css/main_style.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     </head>
 
     <body>
@@ -19,18 +20,17 @@
         <main>
             <div class="darkmode_toggle">
                 <input type="radio" name="d_togglesw" id="on" value="1"/>
-                <label for="on" class="switch_light">Light Mode</label>
+                <label for="on" class="switch_light"><span id="lightsw">Light Mode</span></label>
                 <input type="radio" name="d_togglesw" id="off" value="0"/>
-                <label for="off" class="switch_dark">Dark Mode</label>
+                <label for="off" class="switch_dark"><span id="darksw">Dark Mode</span></label>
             </div>
             <br><br><br>
         </main>
 
         <footer>
-            footer
+            theme change testing
         </footer>
+
+        <script src="./js/script.js"></script>
     </body>
-
-    <script src="./js/script.js"></script>
-
 </html>
